tests/baselines/reference/nestedThisContainer.errors.txt
tests/cases/compiler/nestedThisContainer.ts(10,23): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== tests/cases/compiler/nestedThisContainer.ts (1 errors) ====
    type Foo = any;
    
    const foo: Foo = {};
    
    foo.bar = function () {
        const self: Foo = this;
    };
    
    foo.zab = (function () {
        const self: Foo = this;
                          ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    });
    